# yolo-detection

./: CMakeLists.txt  Cvedia-Esmitt.cpp  README.md  main.cpp  version.txt
.github/workflows/: cmake-single-platform.yml
include/: detectedobject.h  guiengine.h  inferenceengine.h  opencvguiengine.h  opencvinferenceengine.h
src/: opencvguiengine.cpp  opencvinferenceengine.cpp
